# malign-logits

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
data/: battery_results.csv  displacement_taxonomy.csv  examples.txt  gen_battery_metrics.csv  gen_battery_raw.parquet  logit_lens.amber.she_was_so_angry_she_wanted_to.kill_scream.csv  logit_lens.llama.he_pushed_her_onto_the_bed_and_started_to.fuck_massage_kiss.csv  logit_lens.llama.she_was_so_angry_she_wanted_to.kill_scream.csv  logit_lens.olmo.he_pushed_her_onto_the_bed_and_started_to.fuck_massage_kiss.csv  logit_lens.olmo.she_was_so_angry_she_wanted_to.kill_scream.csv  logit_lens.olmo.she_was_so_angry_she_wanted_to.kill_scream_punch_throw_hit.csv  logit_lens.qwen.she_was_so_angry_she_wanted_to.kill_scream.csv  step_analysis_metrics.csv  step_analysis_words.csv  transgressive_mass.csv
malign_logits/: __init__.py  analysis.py  app.py  cli.py  core.py  embedding.py  experiments.py  generation.py  models.py  psyche.py  server.py  viz.py
notebooks/: generate.ipynb  generate2.ipynb  generate3.ipynb  generate4.ipynb  generate5.ipynb  generate6.ipynb  layers.ipynb  newgenerate1.ipynb  newmodel.ipynb  newmodel2.ipynb  quickstart.ipynb  quickstart.py  quickstart2.ipynb
