[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malign-logits"
version = "0.2.0"
description = "A toolkit for psychoanalytic analysis of LLM probability distributions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "rj416"},
]
maintainers = [
    {name = "rj416"},
]
keywords = [
    "llm",
    "ai",
    "psychoanalysis",
    "transformers",
    "huggingface",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
cache = [
    "hashstash",
]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy",
]
notebooks = [
    "jupyter",
    "matplotlib",
    "seaborn",
]

[project.scripts]
malign = "malign_logits.cli:main"

[project.urls]
Homepage = "https://github.com/rj416/malign-logits"
Repository = "https://github.com/rj416/malign-logits"
"Bug Reports" = "https://github.com/rj416/malign-logits/issues"
"Source" = "https://github.com/rj416/malign-logits"

[tool.setuptools]
packages = ["malign_logits"]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"malign_logits" = ["*.py"]